--- a/package.json
+++ b/package.json
@@ -44,16 +44,18 @@
   },
   "dependencies": {
     "@bitauth/libauth": "^1.18.1",
-    "@mikro-orm/cli": "^4.5.9",
-    "@mikro-orm/core": "^4.5.9",
-    "@mikro-orm/migrations": "^4.5.9",
-    "@mikro-orm/postgresql": "^4.5.9",
+    "@mikro-orm/cli": "^4.4.3",
+    "@mikro-orm/core": "^4.4.3",
+    "@mikro-orm/migrations": "^4.4.3",
+    "@mikro-orm/postgresql": "^4.4.3",
     "apollo-server-express": "^3.4.0",
     "express": "^4.17.1",
     "graphql": "^15.6.1",
     "nodemon": "^2.0.14",
     "pg": "^8.7.1",
-    "type-graphql": "^1.1.1"
+    "reflect-metadata": "^0.1.13",
+    "type-graphql": "^1.1.1",
+    "typeorm": "^0.2.38"
   },
   "devDependencies": {
     "@ava/typescript": "^2.0.0",
@@ -63,7 +65,7 @@
     "@typescript-eslint/parser": "^5.1.0",
     "ava": "^3.15.0",
     "codecov": "^3.8.3",
-    "cz-conventional-changelog": "^3.3.0",
+    "cz-conventional-changelog": "^3.0.1",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
