--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "scripts": {
     "dev": "nodemon build/main/index.js",
     "build": "run-p build:*",
+    "create:migration": "mikro-orm migration:create",
     "build:main": "tsc -p tsconfig.json",
     "build:module": "tsc -p tsconfig.module.json",
     "fix": "run-s fix:*",
@@ -49,10 +50,14 @@
     "@mikro-orm/migrations": "^4.4.3",
     "@mikro-orm/postgresql": "^4.4.3",
     "apollo-server-express": "^3.4.0",
+    "argon2": "^0.28.2",
+    "connect-redis": "^6.0.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "graphql": "^15.6.1",
     "nodemon": "^2.0.14",
     "pg": "^8.7.1",
+    "redis": "^3.1.2",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.1.1",
     "typeorm": "^0.2.38"
@@ -60,7 +65,10 @@
   "devDependencies": {
     "@ava/typescript": "^2.0.0",
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
+    "@types/connect-redis": "^0.0.17",
     "@types/express": "^4.17.13",
+    "@types/express-session": "^1.17.4",
+    "@types/redis": "^2.8.32",
     "@typescript-eslint/eslint-plugin": "^5.1.0",
     "@typescript-eslint/parser": "^5.1.0",
     "ava": "^3.15.0",
