--- a/web/package.json
+++ b/web/package.json
@@ -24,6 +24,7 @@
     "@emotion/styled": "^11.3.0",
     "@fontsource/lexend": "^4.5.1",
     "@types/next": "^9.0.0",
+    "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
     "next": "^11.1.2",
     "next-pwa": "^5.4.0",
