--- a/server/package.json
+++ b/server/package.json
@@ -50,11 +50,12 @@
     "@mikro-orm/migrations": "^4.4.3",
     "@mikro-orm/postgresql": "^4.4.3",
     "apollo-server-express": "^3.4.0",
-    "argon2": "^0.28.2",
+    "argon2": "^0.28.3",
     "connect-redis": "^6.0.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
-    "graphql": "^15.6.1",
+    "graphql": "^15.7.1",
     "nodemon": "^2.0.14",
     "pg": "^8.7.1",
     "redis": "^3.1.2",
@@ -66,6 +67,7 @@
     "@ava/typescript": "^2.0.0",
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@types/connect-redis": "^0.0.17",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.4",
     "@types/redis": "^2.8.32",
@@ -87,7 +89,7 @@
     "standard-version": "^9.3.2",
     "ts-node": "^10.3.0",
     "typedoc": "^0.22.6",
-    "typescript": "^4.4.4"
+    "typescript": "^4.5.4"
   },
   "files": [
     "build/main",
