--- a/web/package.json
+++ b/web/package.json
@@ -13,7 +13,8 @@
     "format": "prettier --write src",
     "up-latest": "yarn upgrade-interactive --latest",
     "release": "standard-version",
-    "push-release": "git push --follow-tags origin main"
+    "push-release": "git push --follow-tags origin main",
+    "gen": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
     "@chakra-ui/react": "^1.6.10",
@@ -26,15 +27,21 @@
     "@types/next": "^9.0.0",
     "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
-    "next": "^11.1.2",
+    "graphql": "^15.7.1",
+    "next": "^12.0.7",
     "next-pwa": "^5.4.0",
     "next-seo": "^4.28.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "urql": "^2.0.5"
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^13.2.0",
+    "@graphql-codegen/cli": "2.2.1",
+    "@graphql-codegen/typescript": "2.2.4",
+    "@graphql-codegen/typescript-operations": "2.1.8",
+    "@graphql-codegen/typescript-urql": "^3.2.2",
     "@types/node": "^16.11.4",
     "@types/react": "^17.0.30",
     "commitlint": "^13.2.1",
