--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -18,7 +18,12 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "baseUrl": "src",
-    "incremental": true
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noImplicitReturns": true,
+    "noImplicitAny": true,
+    "incremental": true,
+    "allowSyntheticDefaultImports": true
   },
   "include": [
     "next-env.d.ts",
