--- a/web/package.json
+++ b/web/package.json
@@ -25,16 +25,20 @@
     "@emotion/styled": "^11.3.0",
     "@fontsource/lexend": "^4.5.1",
     "@types/next": "^9.0.0",
+    "@urql/exchange-graphcache": "^4.3.6",
     "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
-    "graphql": "^15.7.1",
+    "graphql": "^15.8.0",
     "next": "^12.0.7",
     "next-pwa": "^5.4.0",
     "next-seo": "^4.28.1",
+    "next-urql": "^3.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
-    "urql": "^2.0.5"
+    "react-is": "^17.0.2",
+    "react-ssr-prepass": "^1.4.0",
+    "urql": "^2.0.6"
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^13.2.0",
