--- a/server/package.json
+++ b/server/package.json
@@ -56,6 +56,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "graphql": "^15.7.1",
+    "nodemailer": "^6.7.2",
     "nodemon": "^2.0.14",
     "pg": "^8.7.1",
     "redis": "^3.1.2",
@@ -70,6 +71,7 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.4",
+    "@types/nodemailer": "^6.4.4",
     "@types/redis": "^2.8.32",
     "@typescript-eslint/eslint-plugin": "^5.1.0",
     "@typescript-eslint/parser": "^5.1.0",
