--- a/server/package.json
+++ b/server/package.json
@@ -56,13 +56,15 @@
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "graphql": "^15.7.1",
+    "ioredis": "^4.28.2",
     "nodemailer": "^6.7.2",
     "nodemon": "^2.0.14",
     "pg": "^8.7.1",
     "redis": "^3.1.2",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.1.1",
-    "typeorm": "^0.2.38"
+    "typeorm": "^0.2.38",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@ava/typescript": "^2.0.0",
