--- a/server/package.json
+++ b/server/package.json
@@ -60,7 +60,6 @@
     "nodemailer": "^6.7.2",
     "nodemon": "^2.0.14",
     "pg": "^8.7.1",
-    "redis": "^3.1.2",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.1.1",
     "typeorm": "^0.2.38",
@@ -73,8 +72,10 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.4",
+    "@types/ioredis": "^4.28.5",
     "@types/nodemailer": "^6.4.4",
     "@types/redis": "^2.8.32",
+    "@types/uuid": "^8.3.3",
     "@typescript-eslint/eslint-plugin": "^5.1.0",
     "@typescript-eslint/parser": "^5.1.0",
     "ava": "^3.15.0",
