--- a/server/package.json
+++ b/server/package.json
@@ -93,6 +93,7 @@
     "prettier": "^2.4.1",
     "standard-version": "^9.3.2",
     "ts-node": "^10.3.0",
+    "tslib": "^2.3.1",
     "typedoc": "^0.22.6",
     "typescript": "^4.5.4"
   },
