--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,10 +1,12 @@
 {
   "compilerOptions": {
-    "experimentalDecorators": true,
+    "strict": true,
     "incremental": true,
     "target": "es2017",
     "outDir": "build/main",
     "rootDir": "src",
+    "importHelpers": true,
+    "forceConsistentCasingInFileNames": true,
     "moduleResolution": "node",
     "module": "commonjs",
     "declaration": true,
@@ -31,7 +33,7 @@
     "listFiles": false /* Print names of files part of the compilation. */,
     "pretty": true /* Stylize errors and messages using color and context. */,
     /* Experimental Options */
-    // "experimentalDecorators": true /* Enables experimental support for ES7 decorators. */,
+    "experimentalDecorators": true /* Enables experimental support for ES7 decorators. */,
     "emitDecoratorMetadata": true /* Enables experimental support for emitting type metadata for decorators. */,
     "lib": [
       "es2017"
