--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,12 +1,12 @@
 {
   "compilerOptions": {
-    "strict": true,
+    "strict": false,
     "incremental": true,
     "target": "es2017",
     "outDir": "build/main",
     "rootDir": "src",
     "importHelpers": true,
-    "forceConsistentCasingInFileNames": true,
+    // "forceConsistentCasingInFileNames": true,
     "moduleResolution": "node",
     "module": "commonjs",
     "useUnknownInCatchVariables": false,
@@ -26,7 +26,7 @@
     /* Additional Checks */
     // "noUnusedLocals": true /* Report errors on unused locals. */,
     // "noUnusedParameters": true /* Report errors on unused parameters. */,
-    "noImplicitReturns": true /* Report error when not all code paths in function return a value. */,
+    // "noImplicitReturns": true /* Report error when not all code paths in function return a value. */,
     "noFallthroughCasesInSwitch": true /* Report errors for fallthrough cases in switch statement. */,
     /* Debugging Options */
     "traceResolution": false /* Report module resolution log messages. */,
