--- a/server/package.json
+++ b/server/package.json
@@ -47,7 +47,9 @@
     "apollo-server-core": "^3.5.0",
     "apollo-server-express": "^3.4.0",
     "argon2": "^0.28.3",
+    "body-parser": "^1.19.1",
     "connect-redis": "^6.0.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
@@ -69,7 +71,7 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.4",
-    "@types/ioredis": "^4.28.5",
+    "@types/ioredis": "^4.28.7",
     "@types/nodemailer": "^6.4.4",
     "@types/redis": "4.0.10",
     "@types/uuid": "^8.3.3",
