--- a/web/package.json
+++ b/web/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "nextarter-chakra",
+  "name": "Dreddit",
   "version": "0.1.0",
   "private": true,
-  "author": "sozonome",
+  "author": "innellea",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
