--- a/server/package.json
+++ b/server/package.json
@@ -1,141 +1,53 @@
 {
-  "name": "lireddit-server",
+  "name": "dreddit-server",
   "version": "1.0.0",
-  "description": "lireddit-server",
-  "main": "build/main/index.js",
-  "typings": "build/main/index.d.ts",
-  "module": "build/module/index.js",
-  "repository": "https://github.com/innellea/lireddit-server",
-  "license": "MIT",
-  "keywords": [],
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "dev": "nodemon build/main/index.js",
-    "build": "run-p build:*",
-    "build:main": "tsc -p tsconfig.json",
-    "build:module": "tsc -p tsconfig.module.json",
-    "fix": "run-s fix:*",
-    "fix:prettier": "prettier \"src/**/*.ts\" --write",
-    "fix:lint": "eslint src --ext .ts --fix",
-    "test": "run-s build test:*",
-    "test:lint": "eslint src --ext .ts",
-    "test:prettier": "prettier \"src/**/*.ts\" --list-different",
-    "test:spelling": "cspell \"{README.md,.github/*.md,src/**/*.ts}\"",
-    "test:unit": "nyc --silent ava",
-    "check-cli": "run-s test diff-integration-tests check-integration-tests",
-    "check-integration-tests": "run-s check-integration-test:*",
-    "diff-integration-tests": "mkdir -p diff && rm -rf diff/test && cp -r test diff/test && rm -rf diff/test/test-*/.git && cd diff && git init --quiet && git add -A && git commit --quiet --no-verify --allow-empty -m 'WIP' && echo '\\n\\nCommitted most recent integration test output in the \"diff\" directory. Review the changes with \"cd diff && git diff HEAD\" or your preferred git diff viewer.'",
-    "watch:build": "tsc -p tsconfig.json -w",
-    "watch:test": "nyc --silent ava --watch",
-    "cov": "run-s build test:unit cov:html cov:lcov && open-cli coverage/index.html",
-    "cov:html": "nyc report --reporter=html",
-    "cov:lcov": "nyc report --reporter=lcov",
-    "cov:send": "run-s cov:lcov && codecov",
-    "cov:check": "nyc report && nyc check-coverage --lines 100 --functions 100 --branches 100",
-    "doc": "run-s doc:html && open-cli build/docs/index.html",
-    "doc:html": "typedoc src/ --exclude **/*.spec.ts --target ES6 --mode file --out build/docs",
-    "doc:json": "typedoc src/ --exclude **/*.spec.ts --target ES6 --mode file --json build/docs/typedoc.json",
-    "doc:publish": "gh-pages -m \"[ci skip] Updates\" -d build/docs",
-    "version": "standard-version",
-    "reset-hard": "git clean -dfx && git reset --hard && npm i",
-    "prepare-release": "run-s reset-hard test cov:check doc:html version doc:publish"
+    "watch": "tsc -w",
+    "dev": "nodemon build/index.js",
+    "start": "node dist/index.js",
+    "start2": "ts-node src/index.ts",
+    "dev2": "nodemon --exec ts-node src/index.ts"
   },
-  "engines": {
-    "node": ">=10"
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "@types/connect-redis": "^0.0.14",
+    "@types/cors": "^2.8.7",
+    "@types/express": "^4.17.7",
+    "@types/express-session": "^1.17.0",
+    "@types/ioredis": "^4.17.3",
+    "@types/node": "^14.0.27",
+    "@types/nodemailer": "^6.4.0",
+    "@types/redis": "^2.8.25",
+    "@types/uuid": "^8.0.1",
+    "nodemon": "^2.0.4",
+    "ts-node": "^8.10.2",
+    "typescript": "^3.9.7"
   },
   "dependencies": {
-    "@bitauth/libauth": "^1.18.1",
-    "apollo-server-core": "^3.5.0",
-    "apollo-server-express": "^3.4.0",
-    "argon2": "^0.28.3",
-    "body-parser": "^1.19.1",
-    "connect-redis": "^6.0.0",
-    "cookie-parser": "^1.4.6",
+    "apollo-server-express": "^2.16.1",
+    "argon2": "^0.26.2",
+    "connect-redis": "^5.0.0",
     "cors": "^2.8.5",
-    "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "express-session": "^1.17.2",
-    "graphql": "^15.7.1",
-    "ioredis": "^4.28.2",
-    "nodemailer": "^6.7.2",
-    "nodemon": "^2.0.14",
-    "pg": "^8.7.1",
+    "express-session": "^1.17.1",
+    "graphql": "^15.3.0",
+    "ioredis": "^4.17.3",
+    "nodemailer": "^6.4.11",
+    "pg": "^8.3.0",
     "reflect-metadata": "^0.1.13",
-    "type-graphql": "^1.1.1",
-    "typeorm": "^0.2.41",
-    "uuid": "^8.3.2"
-  },
-  "devDependencies": {
-    "@ava/typescript": "^3.0.0",
-    "@istanbuljs/nyc-config-typescript": "1.0.2",
-    "@types/connect-redis": "^0.0.18",
-    "@types/cors": "^2.8.12",
-    "@types/express": "^4.17.13",
-    "@types/express-session": "^1.17.4",
-    "@types/ioredis": "^4.28.7",
-    "@types/nodemailer": "^6.4.4",
-    "@types/redis": "4.0.10",
-    "@types/uuid": "^8.3.3",
-    "@typescript-eslint/eslint-plugin": "^5.1.0",
-    "@typescript-eslint/parser": "^5.1.0",
-    "ava": "^4.0.0",
-    "codecov": "^3.8.3",
-    "cz-conventional-changelog": "^3.0.1",
-    "eslint": "^8.0.1",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-functional": "^4.0.0",
-    "eslint-plugin-import": "2.25.4",
-    "gh-pages": "^3.2.3",
-    "npm-run-all": "^4.1.5",
-    "nyc": "^15.1.0",
-    "open-cli": "^7.0.1",
-    "prettier": "^2.4.1",
-    "standard-version": "^9.3.2",
-    "ts-node": "^10.3.0",
-    "tslib": "^2.3.1",
-    "typedoc": "^0.22.6",
-    "typescript": "^4.5.4"
-  },
-  "files": [
-    "build/main",
-    "build/module",
-    "!**/*.spec.*",
-    "!**/*.json",
-    "CHANGELOG.md",
-    "LICENSE",
-    "README.md"
-  ],
-  "ava": {
-    "failFast": true,
-    "timeout": "60s",
-    "typescript": {
-      "rewritePaths": {
-        "src/": "build/main/"
-      }
-    },
-    "files": [
-      "!build/module/**"
-    ]
-  },
-  "config": {
-    "commitizen": {
-      "path": "cz-conventional-changelog"
-    }
+    "type-graphql": "^1.0.0-rc.3",
+    "typeorm": "^0.2.25",
+    "uuid": "^8.3.0"
   },
   "mikro-orm": {
     "useTsNode": true,
     "configPaths": [
       "./src/mikro-orm.config.ts",
-      "./build/mikro-orm.config.js"
-    ]
-  },
-  "prettier": {
-    "singleQuote": true
-  },
-  "nyc": {
-    "extends": "@istanbuljs/nyc-config-typescript",
-    "exclude": [
-      "**/*.spec.js"
+      "./dist/mikro-orm.config.js"
     ]
   }
 }
