--- a/renovate.json
+++ b/renovate.json
@@ -1,18 +1,21 @@
 {
-    "extends": ["config:base"],
+    "extends": ["config:base",],
     "semanticCommits": true,
-
+    "rangeStrategy": "bump",
+    "rebaseLabel": "rebase",
     "rebaseWhen": "auto",
+    "requiredStatusChecks": [],
     "packageRules": [
-        {
-            "matchUpdateTypes": ["major", "minor", "patch", "pin", "digest"],
-            "automerge": true,
-            "automergeType": "branch"
-        },
-        {
-            "depTypeList": ["devDependencies"],
-            "automerge": true
-        }
-    ],
-    "platformAutomerge": true
-}
+      {
+        "updateTypes": ["minor", "patch", "pin", "digest"],
+        "automerge": true
+      },
+      {
+        "depTypeList": ["devDependencies"],
+        "automerge": true
+      },
+      {
+        "packagePatterns": ["eslint"],
+        "groupName": "eslint"
+      }
+    ]
