--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -13,13 +13,13 @@
     "outDir": "./dist",
     "moduleResolution": "node",
     "removeComments": true,
-    "noImplicitAny": true,
+    // "noImplicitAny": true,
     "strictNullChecks": true,
     "strictFunctionTypes": true,
-    "noImplicitThis": true,
+    // "noImplicitThis": true,
     // "noUnusedLocals": true,
     // "noUnusedParameters": true,
-    "noImplicitReturns": true,
+    // "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
