--- a/server/package.json
+++ b/server/package.json
@@ -1,53 +1,55 @@
 {
-  "name": "lireddit-server",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "watch": "tsc -w",
-    "dev": "nodemon dist/index.js",
-    "start": "node dist/index.js",
-    "start2": "ts-node src/index.ts",
-    "dev2": "nodemon --exec ts-node src/index.ts"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@types/connect-redis": "^0.0.14",
-    "@types/cors": "^2.8.7",
-    "@types/express": "^4.17.7",
-    "@types/express-session": "^1.17.0",
-    "@types/ioredis": "^4.17.3",
-    "@types/node": "^14.0.27",
-    "@types/nodemailer": "^6.4.0",
-    "@types/redis": "^2.8.25",
-    "@types/uuid": "^8.0.1",
-    "nodemon": "^2.0.4",
-    "ts-node": "^8.10.2",
-    "typescript": "^3.9.7"
-  },
-  "dependencies": {
-    "apollo-server-express": "^2.16.1",
-    "argon2": "^0.26.2",
-    "connect-redis": "^5.0.0",
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "express-session": "^1.17.1",
-    "graphql": "^15.3.0",
-    "ioredis": "^4.17.3",
-    "nodemailer": "^6.4.11",
-    "pg": "^8.3.0",
-    "reflect-metadata": "^0.1.13",
-    "type-graphql": "^1.0.0-rc.3",
-    "typeorm": "^0.2.25",
-    "uuid": "^8.3.0"
-  },
-  "mikro-orm": {
-    "useTsNode": true,
-    "configPaths": [
-      "./src/mikro-orm.config.ts",
-      "./dist/mikro-orm.config.js"
-    ]
-  }
+    "name": "lireddit-server",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "watch": "tsc -w",
+        "dev": "nodemon dist/index.js",
+        "start": "node dist/index.js",
+        "start2": "ts-node src/index.ts",
+        "dev2": "nodemon --exec ts-node src/index.ts"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "@types/connect-redis": "^0.0.18",
+        "@types/cors": "^2.8.12",
+        "@types/express": "^4.17.13",
+        "@types/express-session": "^1.17.4",
+        "@types/ioredis": "^4.28.7",
+        "@types/node": "^17.0.10",
+        "@types/nodemailer": "^6.4.4",
+        "@types/redis": "^4.0.11",
+        "@types/uuid": "^8.3.4",
+        "nodemon": "^2.0.15",
+        "ts-node": "^10.4.0",
+        "typescript": "^4.5.4"
+    },
+    "dependencies": {
+        "apollo-server-express": "^3.6.2",
+        "argon2": "^0.28.3",
+        "class-validator": "^0.13.2",
+        "connect-redis": "^6.0.0",
+        "cors": "^2.8.5",
+        "express": "^4.17.2",
+        "express-session": "^1.17.2",
+        "graphql": "^15.3.0",
+        "helmet": "^5.0.1",
+        "ioredis": "^4.28.3",
+        "nodemailer": "^6.7.2",
+        "pg": "^8.7.1",
+        "reflect-metadata": "^0.1.13",
+        "type-graphql": "^1.1.1",
+        "typeorm": "^0.2.41",
+        "uuid": "^8.3.2"
+    },
+    "mikro-orm": {
+        "useTsNode": true,
+        "configPaths": [
+            "./src/mikro-orm.config.ts",
+            "./dist/mikro-orm.config.js"
+        ]
+    }
 }
