--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,9 @@
         "dev": "nodemon dist/index.js",
         "start": "node dist/index.js",
         "start2": "ts-node src/index.ts",
-        "dev2": "nodemon --exec ts-node src/index.ts"
+        "dev2": "nodemon --exec ts-node src/index.ts",
+        "eslint": "eslint --color --ext .html,.js,.json,.jsx,.md,.ts,.tsx *.* src",
+        "eslint:fix": "npm run eslint -- --fix"
     },
     "keywords": [],
     "author": "",
@@ -23,6 +25,29 @@
         "@types/nodemailer": "^6.4.4",
         "@types/redis": "^4.0.11",
         "@types/uuid": "^8.3.4",
+        "@typescript-eslint/eslint-plugin": "^5.10.0",
+        "@typescript-eslint/parser": "^5.10.0",
+        "eslint-config-adjunct": "^4.11.1",
+        "eslint-config-airbnb-typescript": "^16.1.0",
+        "eslint-config-auto": "^0.7.1",
+        "eslint-config-prettier": "^8.3.0",
+        "eslint-plugin-array-func": "^3.1.7",
+        "eslint-plugin-eslint-comments": "^3.2.0",
+        "eslint-plugin-html": "^6.2.0",
+        "eslint-plugin-json": "^3.1.0",
+        "eslint-plugin-markdown": "^2.2.1",
+        "eslint-plugin-no-constructor-bind": "^2.0.4",
+        "eslint-plugin-no-secrets": "^0.8.9",
+        "eslint-plugin-no-unsanitized": "^4.0.1",
+        "eslint-plugin-no-use-extend-native": "^0.5.0",
+        "eslint-plugin-optimize-regex": "^1.2.1",
+        "eslint-plugin-promise": "^6.0.0",
+        "eslint-plugin-scanjs-rules": "^0.2.1",
+        "eslint-plugin-security": "^1.4.0",
+        "eslint-plugin-simple-import-sort": "^7.0.0",
+        "eslint-plugin-sonarjs": "^0.11.0",
+        "eslint-plugin-switch-case": "^1.1.2",
+        "eslint-plugin-unicorn": "^40.1.0",
         "nodemon": "^2.0.15",
         "ts-node": "^10.4.0",
         "typescript": "^4.5.4"
