--- a/web/package.json
+++ b/web/package.json
@@ -51,8 +51,12 @@
     "@types/react": "^17.0.38",
     "commitlint": "^16.0.3",
     "eslint": "^8.7.0",
+    "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "^12.0.8",
     "eslint-config-sznm": "^0.2.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.28.0",
     "husky": "^7.0.4",
     "lint-staged": "^12.2.0",
     "next-sitemap": "^1.9.12",
