--- a/web/package.json
+++ b/web/package.json
@@ -17,6 +17,7 @@
     "gen": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^1.1.1",
     "@chakra-ui/react": "^1.7.4",
     "@emotion/cache": "^11.7.1",
     "@emotion/core": "^11.0.0",
