--- a/web/package.json
+++ b/web/package.json
@@ -30,6 +30,7 @@
     "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
     "graphql": "^15.8.0",
+    "graphql-tag": "^2.12.6",
     "next": "^12.0.8",
     "next-pwa": "^5.4.4",
     "next-seo": "^4.28.1",
