--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -20,5 +20,5 @@ RUN npm run build
 ENV NODE_ENV production
 
 EXPOSE 8080
-CMD [ "node", "dis/index.js" ]
+CMD [ "node", "dist/index.js" ]
 USER node
